Implementing attack cooldown and attack's sprite

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -45,6 +45,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\AttackSpriteBehaviour.cs" />
      <Compile Include="Assets\Scripts\CharacterAttackChecker.cs" />
      <Compile Include="Assets\Scripts\CharacterBehaviour.cs" />
      <Compile Include="Assets\Scripts\CharacterInputController.cs" />
